--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -237,7 +237,7 @@
 		"storybook": "^8.4.5",
 		"ts-loader": "9.4.4",
 		"tsc-files": "^1.1.4",
-		"typescript": "^5.1.6",
+		"typescript": "5.1.6",
 		"web-vitals": "^2.0.0",
 		"webpack": "^5.94.0",
 		"webpack-bundle-analyzer": "^4.5.0",
