--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -4,7 +4,7 @@
 	"description": "Frontend for the supporter platform.",
 	"scripts": {
 		"clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
-		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn orphans && yarn tsc",
+		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn knip && yarn tsc",
 		"lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
 		"lint:check": "eslint ./assets --ext .ts --ext .tsx",
 		"lint:fix": "yarn lint:check --fix",
@@ -26,7 +26,6 @@
 		"prettier:fix": "prettier --write ./assets",
 		"storybook": "storybook dev -p 9001 --no-open",
 		"build-storybook": "storybook build -o storybook-static",
-		"orphans": "echo 'Checking for orphan modules' && node scripts/orphans.js",
 		"check-images": "echo 'Purging unused images' && node scripts/gridImages.js"
 	},
 	"browserslist": [
@@ -162,7 +161,6 @@
 		"babel-loader": "^9.1.3",
 		"babel-plugin-add-react-displayname": "^0.0.5",
 		"babel-plugin-dynamic-import-node": "^2.3.3",
-		"chalk": "^4.1.0",
 		"chromatic": "^10.9.6",
 		"concurrently": "^9.1.0",
 		"core-js": "^3.33.3",
@@ -186,7 +184,6 @@
 		"json-sass-vars": "^3.1.0",
 		"knip": "^5.39.2",
 		"lint-staged": "^15.2.0",
-		"madge": "^6.1.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"npm-run-all": "^4.1.3",
 		"postcss": "^8.4.38",
