--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -4,7 +4,7 @@
 	"description": "Frontend for the supporter platform.",
 	"scripts": {
 		"clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
-		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn orphans && yarn tsc",
+		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn tsc && yarn knip",
 		"lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
 		"lint:check": "eslint ./assets --ext .ts --ext .tsx",
 		"lint:fix": "yarn lint:check --fix",
@@ -18,6 +18,7 @@
 		"devrun": "NODE_ENV=DEV npm-run-all clean webpack-dev-server",
 		"test": "NODE_ENV=test echo 'Running TS tests' && jest",
 		"test-watch": "NODE_ENV=test echo 'Running TS tests in watch mode' && jest --watch",
+    "knip": "knip --include files,exports,nsExports,types,nsTypes",
 		"jest-update-snapshot": "echo 'Updating TS tests' && jest -u",
 		"paparazzi": "paparazzi && open ./paparazzi",
 		"prepare": "cd .. && husky install ./support-frontend/.husky",
@@ -25,7 +26,6 @@
 		"prettier:fix": "prettier --write ./assets",
 		"storybook": "storybook dev -p 9001 --no-open",
 		"build-storybook": "storybook build -o storybook-static",
-		"orphans": "echo 'Checking for orphan modules' && node scripts/orphans.js",
 		"check-images": "echo 'Purging unused images' && node scripts/gridImages.js"
 	},
 	"browserslist": [
@@ -152,6 +152,7 @@
 		"@types/jest": "^29.5.14",
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
+		"@types/node": "^22.10.1",
 		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.16",
@@ -160,7 +161,6 @@
 		"babel-loader": "^9.1.3",
 		"babel-plugin-add-react-displayname": "^0.0.5",
 		"babel-plugin-dynamic-import-node": "^2.3.3",
-		"chalk": "^4.1.0",
 		"chromatic": "^10.9.6",
 		"concurrently": "^9.1.0",
 		"core-js": "^3.33.3",
@@ -182,8 +182,8 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-jsdom-global": "^4.0.0",
 		"json-sass-vars": "^3.1.0",
+		"knip": "^5.39.2",
 		"lint-staged": "^15.2.0",
-		"madge": "^6.1.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"npm-run-all": "^4.1.3",
 		"postcss": "^8.4.38",
