--- a/support-e2e/package.json
+++ b/support-e2e/package.json
@@ -24,10 +24,12 @@
 	},
 	"devDependencies": {
 		"@guardian/prettier": "^8.0.0",
+		"@types/node": "^22.10.1",
 		"dotenv": "^16.3.1",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
-		"prettier": "^3.0.3"
+		"prettier": "^3.0.3",
+		"typescript": "^5.7.2"
 	},
 	"lint-staged": {
 		"*.ts": [
