--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -26,7 +26,8 @@
 		"prettier:fix": "prettier --write ./assets",
 		"storybook": "storybook dev -p 9001 --no-open",
 		"build-storybook": "storybook build -o storybook-static",
-		"check-images": "echo 'Purging unused images' && node scripts/gridImages.js"
+		"check-images": "echo 'Purging unused images' && node scripts/gridImages.js",
+		"update-support-service-lambdas": "rm -rf node_modules && yarn cache clean @guardian/support-service-lambdas && yarn install"
 	},
 	"browserslist": [
 		"extends @guardian/browserslist-config"
@@ -89,7 +90,7 @@
 		"@guardian/pasteup": "1.0.0-alpha.7",
 		"@guardian/source": "8.0.0",
 		"@guardian/source-development-kitchen": "13.1.0",
-		"@guardian/support-service-lambdas": "guardian/support-service-lambdas#1b8f4f6be8e1e4e7f86572817ccc0ea36fc79a71",
+		"@guardian/support-service-lambdas": "guardian/support-service-lambdas#52c333594982fa7c7fa03390840161818194647c",
 		"@guardian/tsconfig": "^0.2.0",
 		"@reduxjs/toolkit": "^1.9.4",
 		"@sentry/browser": "^8.33.1",
