--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
+    "test": "jest --group=-integration",
+    "it-test": "jest --group=integration",
+    "lint": "eslint src/typescript/**/*.ts",
     "check-formatting": "prettier --check **.ts",
     "build": "tsc",
     "package": "yarn check-formatting && yarn lint && yarn test && yarn build && mkdir -p target && cd target && zip -qr support-workers.zip ./*.js"
@@ -17,12 +18,15 @@
   "packageManager": "yarn@1.22.22",
   "private": true,
   "dependencies": {
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@aws-sdk/client-ssm": "^3.679.0",
+    "@aws-sdk/credential-provider-node": "3.699.0"
   },
   "devDependencies": {
     "@guardian/prettier": "^2.1.5",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "jest-runner-groups": "^2.2.0",
     "ts-jest": "^29.2.4",
     "@types/node": "^20.11.27",
     "eslint": "^8.57.0",
