--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -18,22 +18,23 @@
   "packageManager": "yarn@1.22.22",
   "private": true,
   "dependencies": {
-    "zod": "^3.23.8",
     "@aws-sdk/client-ssm": "^3.679.0",
-    "@aws-sdk/credential-provider-node": "3.699.0"
+    "@aws-sdk/credential-provider-node": "3.699.0",
+    "stripe": "^17.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@guardian/eslint-config-typescript": "12.0.0",
     "@guardian/prettier": "^2.1.5",
     "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "jest-runner-groups": "^2.2.0",
-    "ts-jest": "^29.2.4",
     "@types/node": "^20.11.27",
     "eslint": "^8.57.0",
-    "@guardian/eslint-config-typescript": "12.0.0",
+    "jest": "^29.7.0",
+    "jest-runner-groups": "^2.2.0",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
+    "ts-jest": "^29.2.4",
     "typescript": "^5.2.2"
   }
 }
