--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -149,6 +149,7 @@
 		"babel-loader": "^9.1.3",
 		"babel-plugin-add-react-displayname": "^0.0.5",
 		"babel-plugin-dynamic-import-node": "^2.3.3",
+		"chromatic": "^10.9.6",
 		"concurrently": "^9.1.0",
 		"css-loader": "^6.7.1",
 		"css-minimizer-webpack-plugin": "^4.2.2",
