Make the user benefits API call work with test users
This required moving to a service provider approach, where the service
returned depends on whether the current user is a test user.

--- a/support-config/src/main/resources/touchpoint.CODE.conf
+++ b/support-config/src/main/resources/touchpoint.CODE.conf
@@ -30,6 +30,9 @@ touchpoint.backend.environments {
       nvp-version = "124.0"
       url = "https://api-3t.sandbox.paypal.com/nvp"
     }
+    userBenefitsApi {
+      host="user-benefits.code.dev-guardianapis.com"
+    }
     zuora {
       api {
         url = "https://rest.apisandbox.zuora.com/v1"
