--- a/support-config/src/main/resources/touchpoint.PROD.conf
+++ b/support-config/src/main/resources/touchpoint.PROD.conf
@@ -30,6 +30,9 @@ touchpoint.backend.environments {
       nvp-version = "124.0"
       url="https://api-3t.paypal.com/nvp"
     }
+    userBenefitsApi {
+      host="user-benefits.guardianapis.com"
+    }
     zuora {
       api {
         url = "https://rest.zuora.com/v1"
