--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -81,7 +81,7 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/utils": "^1.1.0",
 		"@floating-ui/react": "^0.19.2",
-		"@guardian/libs": "^19.1.0",
+		"@guardian/libs": "0.0.0-canary-20250114175557",
 		"@guardian/pasteup": "1.0.0-alpha.7",
 		"@guardian/source": "8.0.0",
 		"@guardian/source-development-kitchen": "13.1.0",
