add incorrect/unmet peer dependencies

--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -105,6 +105,7 @@
 		"redux": "^4.0.0",
 		"seedrandom": "^3.0.5",
 		"snarkdown": "^2.0.0",
+		"tslib": "2.6.2",
 		"tsx": "^4.19.2",
 		"uuid": "^9.0.0",
 		"valibot": "^0.31.0",
@@ -139,6 +140,7 @@
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^22.10.1",
+		"@types/react": "18.2.0",
 		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.16",
@@ -146,6 +148,7 @@
 		"babel-loader": "^9.1.3",
 		"babel-plugin-add-react-displayname": "^0.0.5",
 		"babel-plugin-dynamic-import-node": "^2.3.3",
+		"browserslist": "4.22.2",
 		"chromatic": "^10.9.6",
 		"concurrently": "^9.1.0",
 		"css-loader": "^6.7.1",
@@ -181,7 +184,7 @@
 		"search-in-file": "^3.5.2",
 		"storybook": "^8.4.5",
 		"ts-loader": "9.4.4",
-		"typescript": "5.1.6",
+		"typescript": "5.3.3",
 		"webpack": "^5.94.0",
 		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^5.1.4",
