Add deploy to code script

--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src/typescript/**/*.ts",
     "check-formatting": "prettier --check **.ts",
     "build": "tsc",
-    "package": "yarn check-formatting && yarn lint && yarn test && yarn build && mkdir -p target && cp -R node_modules target/ && cd target && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\""
+    "build-and-zip": "yarn build && mkdir -p target && cp -R node_modules target/ && cd target && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
+    "package": "yarn check-formatting && yarn lint && yarn test && yarn build-and-zip",
+    "deploy-to-code": "yarn build-and-zip && ./deploy-to-code.sh"
   },
   "repository": {
     "type": "git",
