--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src/typescript/**/*.ts",
     "check-formatting": "prettier --check **.ts",
     "build": "tsc",
-    "build-and-zip": "yarn build && mkdir -p target/typescript && cp -R node_modules target/typescript && cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
+    "clean-target": "rm -rf target && mkdir -p target",
+    "install-runtime-dependencies": "yarn install --modules-folder target/typescript/node_modules --production",
+    "build-and-zip": "yarn clean-target && yarn install-runtime-dependencies && yarn build && cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
     "package": "yarn check-formatting && yarn lint && yarn test && yarn build-and-zip",
     "deploy-to-code": "yarn build-and-zip && ./deploy-to-code.sh"
   },
