Add prettier with Guardian config

--- a/support-lambdas/bigquery-acquisitions-publisher/package.json
+++ b/support-lambdas/bigquery-acquisitions-publisher/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@guardian/prettier": "^8.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "jest": "^29.7.0",
+    "prettier": "^3.5.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.7.3"
   }
 }
