--- a/support-e2e/package.json
+++ b/support-e2e/package.json
@@ -15,6 +15,7 @@
 		"test-smoke-dev": "playwright test --project=smoke --config=playwright.dev.config.ts --ui",
 		"test-cron": "playwright test --project=cron --config=playwright.config.ts",
 		"test-cron-ui": "playwright test --project=cron --config=playwright.config.ts --ui",
+		"test-cron-ui-code": "playwright test --project=cron --config=playwright.code.config.ts --ui",
 		"test-cron-dev": "playwright test --project=cron --config=playwright.dev.config.ts --ui"
 	},
 	"dependencies": {
