Use corepack to manage package manager

--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - run: corepack enable
+        shell: bash
+
       # (Respects .nvmrc)
       - name: Setup Node
         uses: actions/setup-node@v4
