--- a/.github/workflows/support-frontend-prettier.yml
+++ b/.github/workflows/support-frontend-prettier.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - run: corepack enable
+        shell: bash
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
