--- a/support-lambdas/bigquery-acquisitions-publisher/package.json
+++ b/support-lambdas/bigquery-acquisitions-publisher/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@guardian/prettier": "^8.0.1",
+    "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "esbuild": "^0.25.0",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.750.0",
     "@aws-sdk/credential-provider-node": "^3.750.0",
-    "@google-cloud/bigquery": "^7.9.2"
+    "@google-cloud/bigquery": "^7.9.2",
+    "aws-lambda": "^1.0.7"
   }
 }
