--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -194,5 +194,5 @@
 	"lint-staged": {
 		"./assets/**/**/*.{js,jsx,ts,tsx}": "eslint"
 	},
-	"packageManager": "yarn@1.22.22"
+	"packageManager": "pnpm@9.15.6"
 }
