Fix some dependencies in package.json
Pnpm is more robust around phantom dependencies (i.e. packages you rely
on but don't specify explicitly.

* React and react-dom are dependencies not dev dependencies.
* @babel/runtime is explicitly relied on, but was being brought in as a
  transitive dependency.

--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -102,6 +102,8 @@
 		"lodash.debounce": "^4.0.6",
 		"mockdate": "^3.0.5",
 		"ophan-tracker-js": "^1.4.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.23.0",
 		"redux": "^4.0.0",
@@ -121,6 +123,7 @@
 		"@babel/preset-env": "^7.22.7",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.26.0",
+		"@babel/runtime": "7.26.0",
 		"@emotion/eslint-plugin": "^11.11.0",
 		"@guardian/browserslist-config": "^6.1.2",
 		"@guardian/eslint-config": "8.0.1",
@@ -175,8 +178,6 @@
 		"postcss-pxtorem": "^6.1.0",
 		"preact": "^10.23.2",
 		"prettier": "^2.8.8",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
 		"rimraf": "^6.0.1",
 		"sass": "^1.69.5",
 		"sass-mq": "^5.0.1",
