--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -38,21 +38,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          cache: "yarn"
+          cache: "pnpm"
           cache-dependency-path: |
-            support-frontend/yarn.lock
-            cdk/yarn.lock
+            support-frontend/pnpm-lock.yaml
 
       - name: Install
-        run: yarn
+        run: pnpm
         working-directory: support-frontend
 
       - name: Build the html used for SSR pages
-        run: yarn run build-ssr
+        run: pnpm run build-ssr
         working-directory: support-frontend
 
       - name: Build assets
-        run: yarn run build-prod
+        run: pnpm run build-prod
         working-directory: support-frontend
 
       - name: Build CFN from CDK
