--- a/.github/workflows/support-frontend-eslint.yml
+++ b/.github/workflows/support-frontend-eslint.yml
@@ -20,13 +20,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'yarn'
-          cache-dependency-path: support-frontend/yarn.lock
+          cache: 'pnpm'
+          cache-dependency-path: support-frontend/pnpm-lock.yaml
 
       - name: Install
-        run: yarn
+        run: pnpm
         working-directory: support-frontend
 
       - name: Lint check
-        run: yarn lint:check
+        run: pnpm lint:check
         working-directory: support-frontend
