--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - run: npm install --global corepack@0.31.0
+
       - run: corepack enable
         shell: bash
 
