Do I need to scope this?

--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -34,6 +34,7 @@ jobs:
 
       - run: corepack enable
         shell: bash
+        working-directory: support-frontend
 
       # (Respects .nvmrc)
       - name: Setup Node
