Is it caching which is breaking things?

--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -41,9 +41,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          cache: "pnpm"
-          cache-dependency-path: |
-            support-frontend/pnpm-lock.yaml
+          # cache: "pnpm"
+          # cache-dependency-path: |
+          #   support-frontend/pnpm-lock.yaml
 
       - name: Install
         run: pnpm
