Pnpm uses symlinks and this path wasn't matching anything

--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -42,7 +42,7 @@
 			".+\\.(js|jsx|ts|tsx)$": "./node_modules/babel-jest"
 		},
 		"transformIgnorePatterns": [
-			"/node_modules/(?!@guardian|valibot)",
+			"/node_modules/\\.pnpm/(?!@guardian|valibot)",
 			"^.+\\.module\\.(css|sass|scss)$"
 		],
 		"moduleFileExtensions": [
