--- a/.github/workflows/support-frontend-eslint.yml
+++ b/.github/workflows/support-frontend-eslint.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
-          cache-dependency-path: support-frontend/pnpm-lock.yaml
+          # cache: 'pnpm'
+          # cache-dependency-path: support-frontend/pnpm-lock.yaml
 
       - name: Install
         run: pnpm
