--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,19 +12,25 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - run: npm install --global corepack@0.31.0
+
+      - run: corepack enable
+        shell: bash
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
 
       # Cache npm dependencies using https://github.com/bahmutov/npm-install
-      - name: Cache dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          working-directory: support-frontend
+      # - name: Cache dependencies
+      #   uses: bahmutov/npm-install@v1
+      #   with:
+      #     working-directory: support-frontend
 
       - name: Install
-        run: yarn
+        run: pnpm install
       - uses: chromaui/action@v11.25.2
         with:
           workingDir: support-frontend
