Run the correct command

--- a/.github/workflows/support-frontend-eslint.yml
+++ b/.github/workflows/support-frontend-eslint.yml
@@ -26,7 +26,7 @@ jobs:
           # cache-dependency-path: support-frontend/pnpm-lock.yaml
 
       - name: Install
-        run: pnpm
+        run: pnpm install
         working-directory: support-frontend
 
       - name: Lint check
