--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -144,7 +144,8 @@
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^22.10.1",
-		"@types/react-dom": "^17.0.11",
+		"@types/react": "^18.2.0",
+		"@types/react-dom": "^18.2.0",
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.16",
 		"babel-jest": "^29.7.0",
