--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -102,8 +102,8 @@
 		"lodash.debounce": "^4.0.6",
 		"mockdate": "^3.0.5",
 		"ophan-tracker-js": "^1.4.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.23.0",
 		"redux": "^4.0.0",
@@ -144,8 +144,8 @@
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^22.10.1",
-		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.2.0",
+		"@types/react": "18.0.3",
+		"@types/react-dom": "18.2.7",
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.16",
 		"babel-jest": "^29.7.0",
@@ -166,6 +166,7 @@
 		"fast-sass-loader": "^2.0.1",
 		"file-loader": "^6.2.0",
 		"husky": "^7.0.1",
+		"immer": "^9.0.21",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-jsdom-global": "^4.0.0",
