Try this to get compressed-size-action working across branches
It doesn't seem to work well with pnpm on the branch and yarn on the
base (main).

--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -44,3 +44,4 @@ jobs:
           pattern: "./public/compiled-assets/{javascripts,webpack}/**/*.js"
           build-script: "build-github-action"
           minimum-change-threshold: 500
+          clean-script: "clean-compressed-action"
