--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -30,29 +30,31 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - run: npm install --global corepack@0.31.0
+
       - run: corepack enable
         shell: bash
+        working-directory: support-frontend
 
       # (Respects .nvmrc)
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          cache: "yarn"
-          cache-dependency-path: |
-            support-frontend/yarn.lock
-            cdk/yarn.lock
+          # cache: "pnpm"
+          # cache-dependency-path: |
+          #   support-frontend/pnpm-lock.yaml
 
       - name: Install
-        run: yarn
+        run: pnpm install
         working-directory: support-frontend
 
       - name: Build the html used for SSR pages
-        run: yarn run build-ssr
+        run: pnpm build-ssr
         working-directory: support-frontend
 
       - name: Build assets
-        run: yarn run build-prod
+        run: pnpm build-prod
         working-directory: support-frontend
 
       - name: Build CFN from CDK
