--- a/.github/workflows/support-frontend-eslint.yml
+++ b/.github/workflows/support-frontend-eslint.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - run: npm install --global corepack@0.31.0
+
       - run: corepack enable
         shell: bash
 
@@ -20,13 +22,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'yarn'
-          cache-dependency-path: support-frontend/yarn.lock
+          # cache: 'pnpm'
+          # cache-dependency-path: support-frontend/pnpm-lock.yaml
 
       - name: Install
-        run: yarn
+        run: pnpm install
         working-directory: support-frontend
 
       - name: Lint check
-        run: yarn lint:check
+        run: pnpm lint:check
         working-directory: support-frontend
