--- a/.github/workflows/bundle-analyser.yml
+++ b/.github/workflows/bundle-analyser.yml
@@ -21,10 +21,10 @@ jobs:
         with:
           node-version-file: '.nvmrc'
       # Cache npm dependencies using https://github.com/bahmutov/npm-install
-      - name: Cache dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          working-directory: support-frontend
+#      - name: Cache dependencies
+#        uses: bahmutov/npm-install@v1
+#        with:
+#          working-directory: support-frontend
 
       - name: Install
         run: yarn
