--- a/.github/workflows/bundle-analyser.yml
+++ b/.github/workflows/bundle-analyser.yml
@@ -16,21 +16,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - run: npm install --global corepack@0.31.0
+
+      - run: corepack enable
+        shell: bash
+        working-directory: support-frontend
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
       # Cache npm dependencies using https://github.com/bahmutov/npm-install
-      - name: Cache dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          working-directory: support-frontend
+#      - name: Cache dependencies
+#        uses: bahmutov/npm-install@v1
+#        with:
+#          working-directory: support-frontend
 
       - name: Install
-        run: yarn
+        run: pnpm install
 
       - name: Generate production build for github action
-        run: yarn build-github-action
+        run: pnpm build-github-action
 
       - name: Run Bundle Analyser
         uses: actions/upload-artifact@v4
