--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -146,6 +146,7 @@
 		"@types/react": "18.0.3",
 		"@types/react-dom": "18.2.7",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/react-test-renderer": "^17.0.1",
 		"autoprefixer": "^10.4.16",
 		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
@@ -179,6 +180,7 @@
 		"postcss-pxtorem": "^6.1.0",
 		"preact": "^10.23.2",
 		"prettier": "^2.8.8",
+		"react-test-renderer": "^19.0.0",
 		"rimraf": "^6.0.1",
 		"sass": "^1.69.5",
 		"sass-mq": "^5.0.1",
