--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -91,6 +91,7 @@
 		"@sentry/browser": "^8.33.1",
 		"@stripe/react-stripe-js": "^2.7.3",
 		"@stripe/stripe-js": "^4.1.0",
+		"@testing-library/dom": "^10.4.0",
 		"@types/dompurify": "^3.0.5",
 		"@types/seedrandom": "^3.0.8",
 		"@types/uuid": "^9.0.2",
