Don't emit when running tsc

--- a/support-lambdas/bigquery-acquisitions-publisher/package.json
+++ b/support-lambdas/bigquery-acquisitions-publisher/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
+		"tsc": "tsc --noEmit",
 		"test": "vitest --run",
 		"test-watch": "vitest",
 		"build": "esbuild --bundle --platform=node --target=node20 --outfile=target/typescript/index.js typescript/index.ts"
