Re-implement the bigquery-acquisitions-publisher lambda in TypeScript (#6787)
There’s an issue with the compressed jar file size which is close to the limit
of S3 based lambda deployments enforced by AWS. When we tried to update the
google-cloud-bigquery Scala library this pushed us over the size limit. We
could migrate to deploying using ECR images instead of S3, which has a much
higher size limit. But we’d like to migrate to TypeScript anyway, and this will
probably sidestep the size issue due to the smaller size of TypeScript/JS code
artefacts.

Note: we haven't deleted all the old Scala code in this PR as it's been useful
to have it side by side with the new TypeScript. We'll raise a follow up PR to
do this once this PR is merged.

We've tested by going through the checkout process in CODE and inspecting the
resulting row(s) in fact_acquisition_events.

--- a/.github/workflows/support-lambdas-build.yml
+++ b/.github/workflows/support-lambdas-build.yml
@@ -60,3 +60,68 @@ jobs:
           export LAST_TEAMCITY_BUILD=15000
           export GITHUB_RUN_NUMBER=$(( $GITHUB_RUN_NUMBER + $LAST_TEAMCITY_BUILD ))
           sbt "project support-lambdas" riffRaffUpload
+
+  support_lambdas_typescripts_bigquery_acquisition_publisher:
+    if: >-
+      (github.actor != 'dependabot[bot]') &&
+        (github.repository_owner == 'guardian' ||
+          github.event_name == 'push')
+
+    # Required by actions-assume-aws-role
+    permissions:
+      id-token: write
+      contents: read
+
+    name: support-lambdas-bigquery-acquisition-publisher build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: "support-lambdas/bigquery-acquisitions-publisher/.nvmrc"
+
+      - name: Build CFN from CDK
+        run: ./script/ci
+        working-directory: cdk
+
+      - run: yarn install
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - run: yarn tsc --noEmit
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - run: yarn prettier -c typescript/*.ts
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - run: yarn test
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - run: yarn build
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - run: zip -qr index.zip ./*.js
+        working-directory: support-lambdas/bigquery-acquisitions-publisher/target/typescript
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+          aws-region: eu-west-1
+
+      - name: Upload to Riff-Raff
+        uses: guardian/actions-riff-raff@v4
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          roleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+          projectName: "support:lambdas:bigquery-acquisitions-publisher"
+          buildNumberOffset: 15000
+          configPath: "support-lambdas/bigquery-acquisitions-publisher/riff-raff.yaml"
+          commentingEnabled: "false"
+          contentDirectories: |
+            cfn:
+              - ./cdk/cdk.out
+            bigquery-acquisitions-publisher:
+              - ./support-lambdas/bigquery-acquisitions-publisher/target/typescript/index.zip
