--- a/support-workers/src/test/resources/reference.conf
+++ b/support-workers/src/test/resources/reference.conf
@@ -10,6 +10,9 @@ touchpoint.backend.environments {
       default {
         api.key.secret = "sk_test_key_default"
       }
+      tortoiseMedia {
+        api.key.secret = "sk_test_key_tortoise"
+      }
     }
   }
 }
