--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -2,10 +2,10 @@ name: Lighthouse CI
 on:
   workflow_dispatch:
   pull_request:
-    types: [labeled] # Only run when a PR is labeled with the 'Seen-on-PROD' label set by prout
+#    types: [labeled] # Only run when a PR is labeled with the 'Seen-on-PROD' label set by prout
 jobs:
   Lighthouse:
-    if: ${{ github.event.label.name == 'Seen-on-PROD' }}
+#    if: ${{ github.event.label.name == 'Seen-on-PROD' }}
     runs-on: ubuntu-latest
     env:
       GOOGLE_CHAT_WEB_HOOK: ${{ secrets.GOOGLE_CHAT_WEB_HOOK }}
