--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   run_node_tests:
-    if: github.actor == 'dependabot[bot]'
+#    if: github.actor == 'dependabot[bot]'
     name: test dependabot
     runs-on: ubuntu-latest
     steps:
@@ -46,3 +46,11 @@ jobs:
       - name: Install & test - CDK
         run: ./script/ci
         working-directory: cdk
+
+      - name: Install - bigquery-acquisitions-publisher
+        run: yarn install
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - name: Test - bigquery-acquisitions-publisher
+        run: yarn test
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
