--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   run_node_tests:
-#    if: github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]'
     name: test dependabot
     runs-on: ubuntu-latest
     steps:
