--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -46,3 +46,11 @@ jobs:
       - name: Install & test - CDK
         run: ./script/ci
         working-directory: cdk
+
+      - name: Install - bigquery-acquisitions-publisher
+        run: yarn install
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
+
+      - name: Test - bigquery-acquisitions-publisher
+        run: yarn test
+        working-directory: support-lambdas/bigquery-acquisitions-publisher
