--- a/cdk/package.json
+++ b/cdk/package.json
@@ -19,14 +19,14 @@
     "diff": "cdk diff --path-metadata false --version-reporting false"
   },
   "devDependencies": {
-    "@guardian/cdk": "v59.3.4",
+    "@guardian/cdk": "61.5.0",
     "@guardian/eslint-config-typescript": "10.0.1",
     "@guardian/prettier": "4.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.14.1",
-    "aws-cdk": "2.155.0",
-    "aws-cdk-lib": "2.189.1",
-    "constructs": "10.3.0",
+    "aws-cdk": "2.1007.0",
+    "aws-cdk-lib": "2.189.0",
+    "constructs": "10.4.2",
     "eslint": "8.57.1",
     "jest": "29.7.0",
     "prettier": "2.8.8",
